15 ticket base structure (#42)
* Design of databases and models implemented (#37)

* Categories and Products API and Makefile upgrade implemented (#38)

* Catalog structure implemented + Makefile fix (#39)

* Tree catalog implemented (#40)

* Product card implemented (#41)
